gcc/testsuite/rust/rustc/ui/impl-trait/in-trait/opaque-in-impl-is-opaque_dg.rs
use std::fmt::Display;

trait Foo {
    fn bar(&self) -> impl Display;
}

impl Foo for () {
    fn bar(&self) -> impl Display {
        "Hello, world"
    }
}

fn main() {
    let x: &str = ().bar();
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

